--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -1,12 +1,295 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.gighub.app.ui.activity.BookingDetailsActivity">
 
-</RelativeLayout>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillViewport="true">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        tools:context="com.gighub.app.ui.activity.KonfirmasiPembayaranActivity">
+
+
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/tools"
+android:id="@+id/card_view"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_margin="7dp">
+
+
+<android.support.v7.widget.LinearLayoutCompat
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <FrameLayout
+        android:id="@+id/frame_gig"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:src="@android:drawable/ic_menu_gallery"
+            android:background="@drawable/transparent_dark"
+            android:id="@+id/btn_img_cover_band_grupband"
+            android:layout_width="match_parent"
+            android:scaleType="centerCrop"
+            android:fitsSystemWindows="true"
+            android:layout_height="200dp"
+            android:textAlignment="center"/>
+        <TextView
+            android:id="@+id/tv_nama_grupband_bookdetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="nama grupband"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            android:textSize="30dp"
+            android:layout_gravity="center"/>
+    </FrameLayout>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:columnCount="3"
+        android:rowCount="3"
+        android:padding="10dp">
+        <com.github.siyamed.shapeimageview.CircularImageView
+            android:layout_row="0"
+            android:layout_rowSpan="3"
+            android:layout_column="0"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/ic_person_black_48dp"
+            app:siBorderWidth="2dp"
+            app:siBorderColor="#ddd"
+            android:layout_margin="5dp"/>
+        <TextView
+            android:id="@+id/tv_nama_user_bookdetails"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nama User"
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            android:id="@+id/tv_harga_grupband"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:layout_columnSpan="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="1.2 KM"
+            />
+        <TextView
+            android:id="@+id/tv_location_bookdetails"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="lokasi"
+            android:layout_marginLeft="10dp"/>
+
+    </GridLayout>
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        tools:context="com.gighub.app.ui.activity.BookingDetailsActivity">
+        <TextView
+
+            android:layout_gravity="bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="apa"/>
+
+        <FrameLayout
+            android:id="@+id/frame_giga"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@android:drawable/ic_menu_gallery"
+                android:background="@drawable/transparent_dark"
+                android:id="@+id/btn_img_cover_band_grupban"
+                android:layout_width="match_parent"
+                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
+                android:layout_height="200dp"
+                android:textAlignment="center"/>
+            <TextView
+                android:id="@+id/tv_nama_gig_bookdetails"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="nama Gig"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:textSize="30dp"
+                android:layout_gravity="center"/>
+        </FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="detail"/>
+
+    </LinearLayout>
+
+
+</android.support.v7.widget.LinearLayoutCompat>
+
+
+</android.support.v7.widget.CardView>
+
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <GridLayout
+                android:columnCount="2"
+                android:fitsSystemWindows="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <TextView
+                    android:layout_column="0"
+                    android:layout_row="0"
+                    android:layout_gravity="left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Descriptions"/>
+                <TextView
+                    android:layout_column="1"
+                    android:layout_row="0"
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Amount"/>
+
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_row="1"
+                    android:layout_column="0"
+                    android:layout_gravity="left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="Price"/>
+                <TextView
+                    android:id="@+id/tv_harga_bookdetails"
+                    android:layout_marginTop="20dp"
+                    android:layout_row="1"
+                    android:layout_column="1"
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="Rp.2000000 / Hours"/>
+
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_row="2"
+                    android:layout_column="0"
+                    android:layout_gravity="left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="Start Time"/>
+                <TextView
+                    android:id="@+id/tv_waktu_mulai_bookdetails"
+                    android:layout_marginTop="10dp"
+                    android:layout_row="2"
+                    android:layout_column="1"
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="2016-11-10 17:00:00"/>
+
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_row="3"
+                    android:layout_column="0"
+                    android:layout_gravity="left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="End Time"/>
+                <TextView
+                    android:id="@+id/tv_waktu_selesai_bookdetails"
+                    android:layout_marginTop="10dp"
+                    android:layout_row="3"
+                    android:layout_column="1"
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="2016-11-10 21:00:00"/>
+
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_row="4"
+                    android:layout_column="0"
+                    android:layout_gravity="left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="Hours"/>
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_row="4"
+                    android:layout_column="1"
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="4"/>
+
+
+
+                <TextView
+                    android:id="@+id/tv_total_bookdetails"
+                    android:layout_marginTop="10dp"
+                    android:layout_row="5"
+                    android:layout_column="1"
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primaryDark"
+                    android:text="Total : Rp.8000000"/>
+
+            </GridLayout>
+        </LinearLayout>
+
+        <Button
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="20dp"
+            android:id="@+id/btn_konfirmasi_pembayaran_bookingdetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Confirm Payment"/>
+
+    </LinearLayout>
+
+</ScrollView>
