--- a/app/src/main/res/layout/fragment_discover_musician_main.xml
+++ b/app/src/main/res/layout/fragment_discover_musician_main.xml
@@ -3,60 +3,65 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     android:layout_centerVertical="true">
-    <GridLayout
+    <LinearLayout
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnCount="2">
-        <ImageView
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_rowSpan="2"
-            android:src="@android:drawable/ic_menu_mapmode"
-            android:layout_gravity="center"
-            />
-        <TextView
-            android:layout_row="0"
-            android:layout_column="1"
-            android:text="States "
-            />
+        android:orientation="vertical">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@android:drawable/ic_menu_mapmode"
+                android:layout_gravity="center" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="States " />
+        </LinearLayout>
         <Spinner
-            android:layout_row="1"
-            android:layout_column="1"
             android:id="@+id/provinsi_spinner"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:prompt="@string/state_spinner">
         </Spinner>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <ImageView
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_rowSpan="2"
+            android:layout_height="20dp"
+            android:layout_width="20dp"
             android:src="@android:drawable/ic_menu_mapmode"
             android:layout_gravity="center"
             />
 
         <TextView
-            android:layout_row="2"
-            android:layout_column="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="City :"
             />
+        </LinearLayout>
         <Spinner
-            android:layout_row="3"
-            android:layout_column="1"
             android:id="@+id/kota_spinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:prompt="@string/city_spinner">
+            android:prompt="@string/city_spinner"
+            android:layout_marginBottom="40dp">
         </Spinner>
 
-        <android.support.v4.widget.Space
-            android:layout_row="4"
-            android:layout_column="0"
-            android:layout_columnSpan="2"
-            android:layout_height="20dp"
-            android:layout_gravity="fill_horizontal"/>
+        <!--<android.support.v4.widget.Space-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="0"-->
+            <!--android:layout_columnSpan="2"-->
+            <!--android:layout_height="20dp"-->
+            <!--android:layout_gravity="fill_horizontal"/>-->
 
         <!--<ImageView-->
             <!--android:layout_row="5"-->
@@ -80,32 +85,38 @@
             <!--android:textColor="@color/colorAccent"-->
             <!--android:background="@drawable/button_border_white" />-->
 
-        <android.support.v4.widget.Space
-            android:layout_row="7"
-            android:layout_column="0"
-            android:layout_columnSpan="2"
-            android:layout_height="20dp"
-            android:layout_gravity="fill_horizontal"/>
+        <!--<android.support.v4.widget.Space-->
+            <!--android:layout_row="7"-->
+            <!--android:layout_column="0"-->
+            <!--android:layout_columnSpan="2"-->
+            <!--android:layout_height="20dp"-->
+            <!--android:layout_gravity="fill_horizontal"/>-->
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <ImageView
-            android:layout_row="8"
-            android:layout_column="0"
-            android:layout_rowSpan="2"
-            android:src="@android:drawable/ic_menu_view"
-            android:layout_gravity="center"
-            />
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@android:drawable/ic_menu_view"/>
         <TextView
-            android:layout_row="8"
-            android:layout_column="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Role : "
             />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <RadioGroup
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:id="@+id/radiogroup_tipe_discovermusician"
-            android:layout_row="9"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
-            android:layout_columnSpan="2"
-            android:layout_column="0">
+            android:layout_marginBottom="40dp">
             <RadioButton
                 android:id="@+id/radio_tipe_group"
                 android:layout_width="wrap_content"
@@ -125,51 +136,67 @@
                 android:layout_gravity="center_horizontal"
                 android:text="All"/>
         </RadioGroup>
+    </LinearLayout>
 
-        <android.support.v4.widget.Space
-            android:layout_row="9"
-            android:layout_column="0"
-            android:layout_columnSpan="2"
-            android:layout_height="20dp"
-            android:layout_gravity="fill_horizontal"/>
+        <!--<android.support.v4.widget.Space-->
+            <!--android:layout_row="9"-->
+            <!--android:layout_column="0"-->
+            <!--android:layout_columnSpan="2"-->
+            <!--android:layout_height="20dp"-->
+            <!--android:layout_gravity="fill_horizontal"/>-->
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <ImageView
-            android:layout_row="10"
-            android:layout_column="0"
-            android:layout_rowSpan="2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@android:drawable/ic_media_play"
             android:layout_gravity="center"
             />
         <TextView
-            android:layout_row="10"
-            android:layout_column="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Music Genre"
             />
+    </LinearLayout>
         <EditText
             android:id="@+id/et_select_genre"
             android:layout_gravity="fill_horizontal"
-            android:layout_row="11"
-            android:layout_column="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Select Genres"
             android:focusable="false"/>
 
-        <android.support.v4.widget.Space
-            android:layout_row="12"
-            android:layout_column="0"
-            android:layout_columnSpan="2"
-            android:layout_height="100dp"
-            android:layout_gravity="fill_horizontal"/>
+        <!--<android.support.v4.widget.Space-->
+            <!--android:layout_row="12"-->
+            <!--android:layout_column="0"-->
+            <!--android:layout_columnSpan="2"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:layout_gravity="fill_horizontal"/>-->
         <Button
+            android:layout_marginTop="40dp"
             android:id="@+id/btn_search"
-            android:layout_row="14"
-            android:layout_columnSpan="2"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
             android:textColor="@color/colorAccent"
-            android:text="Search"
+            android:text="Discover"
             android:background="@drawable/button_border_white"
             android:layout_column="0" />
 
-    </GridLayout>
+        <!--<Button-->
+            <!--android:layout_marginTop="40dp"-->
+            <!--android:id="@+id/btn_search_gigs"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:textColor="@color/colorAccent"-->
+            <!--android:text="Search"-->
+            <!--android:background="@drawable/button_border_white"-->
+            <!--android:layout_column="0" />-->
+
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
