--- a/app/src/main/res/layout/fragment_musician_profile.xml
+++ b/app/src/main/res/layout/fragment_musician_profile.xml
@@ -57,9 +57,45 @@
                 <TextView
                     android:layout_gravity="right"
                     android:layout_column="0"
-                    android:text="Descriptions " />
+                    android:text="Descriptions : " />
                 <TextView
                     android:id="@+id/tv_musician_descriptions"
+                    android:layout_column="1"
+                    android:text="" />
+            </TableRow>
+            <TableRow
+                android:layout_gravity="center"
+                android:minWidth="100dp">
+                <TextView
+                    android:layout_gravity="right"
+                    android:layout_column="0"
+                    android:text="Url Website : " />
+                <TextView
+                    android:id="@+id/tv_musician_url_website"
+                    android:layout_column="1"
+                    android:text="" />
+            </TableRow>
+            <TableRow
+                android:layout_gravity="center"
+                android:minWidth="100dp">
+                <TextView
+                    android:layout_gravity="right"
+                    android:layout_column="0"
+                    android:text="Url Soundcloud : " />
+                <TextView
+                    android:id="@+id/tv_musician_url_soundcloud"
+                    android:layout_column="1"
+                    android:text="" />
+            </TableRow>
+            <TableRow
+                android:layout_gravity="center"
+                android:minWidth="100dp">
+                <TextView
+                    android:layout_gravity="right"
+                    android:layout_column="0"
+                    android:text="Url Reverbnation : " />
+                <TextView
+                    android:id="@+id/tv_musician_url_reverbnation"
                     android:layout_column="1"
                     android:text="" />
             </TableRow>
@@ -71,8 +107,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
+            android:layout_marginBottom="10dp"
             android:text="Anggota"
+            android:textStyle="bold"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/tv_posisi_musicianprofile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="25dp"
+            android:text="posisi"
             android:textStyle="bold"
             android:gravity="center"/>
 
