--- a/app/src/main/res/layout/activity_register_as_musician.xml
+++ b/app/src/main/res/layout/activity_register_as_musician.xml
@@ -97,6 +97,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
         android:gravity="end">
         <Button
             android:id="@+id/btn_cancel_register_msc"
@@ -107,7 +108,7 @@
             android:textStyle="bold"
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/button_border_white"
+            android:background="@drawable/button_border_white_negative"
             android:text="@string/cancel"/>
         <Button
             android:textColor="@color/colorAccent"
