--- a/app/src/main/res/layout/activity_review_musician.xml
+++ b/app/src/main/res/layout/activity_review_musician.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,30 +16,103 @@
     android:orientation="vertical"
     tools:context="com.gighub.app.ui.activity.ReviewMusicianActivity">
 
-    <RatingBar
-        android:numStars="5"
-        android:layout_width="match_parent"
+    <com.github.siyamed.shapeimageview.CircularImageView
+        android:id="@+id/img_photo_musician_reviewmusician"
+        android:layout_gravity="center"
+        android:src="@drawable/ava"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="25dp"
+        app:siBorderWidth="1dp"
+        app:siBorderColor="@color/primaryOrange"/>
+    <TextView
+        android:id="@+id/tv_musician_name_reviewmusician"
+        android:layout_gravity="center"
+        android:textSize="16pt"
+        android:layout_marginBottom="25dp"
+        android:text="@string/musician_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
+        android:layout_gravity="center"
+        android:textSize="12pt"
+        android:layout_marginBottom="25dp"
+        android:text="@string/how_about_the_show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <RatingBar
+        android:id="@+id/ratbar_reviewmusician"
+        android:layout_gravity="center"
+        android:numStars="5"
+        android:elevation="4dp"
+        android:rating="5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:progressTint="@color/primaryOrange"/>
+
+    <TextView
+        android:id="@+id/tv_rating_number_reviewmusician"
+        android:layout_gravity="center"
+        android:textSize="12pt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="5.0"/>
+    <LinearLayout
+        android:id="@+id/ll_review_message_reviewmusician"
+        android:elevation="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Berikan ulasan kepada musisi"/>
-    <EditText
-        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:background="@drawable/border_orange">
+        <com.github.siyamed.shapeimageview.CircularImageView
+            android:id="@+id/img_user_reviewer_reviewmusician"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/default_user"/>
+        <TextView
+            android:id="@+id/tv_pesan_review_reviewmusician"
+            android:layout_gravity="center"
+            android:textSize="11pt"
+            android:text="message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"/>
+    </LinearLayout>
+
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/write_a_review"/>-->
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/editText" />
+        android:hint="@string/write_a_review">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:text="@string/very_good"
+            android:id="@+id/et_review_musician__reviewmusician" />
+    </android.support.design.widget.TextInputLayout>
+
     <LinearLayout
         android:gravity="right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
-            android:text="send"
+            android:id="@+id/btn_send_review_reviewmusician"
+            android:text="@string/send"
             android:background="@drawable/button_border_white"
             android:textColor="@color/colorAccent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
